@@ -1,5 +1,11 @@
 2014-08-10  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/session.c (incremental_search): Backspace always deletes last
+	character in search pattern.  Do search again to update displayed
+	highlights.
+
+2014-08-10  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/search.c (regexp_search): Arguments changed.  Don't take
 	WINDOW argument.
 	* info/info-utils.c (scan_node_contents)
